Hints are not included in the SearchRuleDescriber any more - the feature is a GUI feature now