@@ -29,12 +29,10 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testSimpleTerm() {
         String query = "test";
-        List<Text> expectedTexts = Arrays.asList(
+        List<Text> expectedTexts = List.of(
                 TooltipTextUtil.createText("This search contains entries in which any field contains the term "),
                 TooltipTextUtil.createText("test", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" (case insensitive). "),
-                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:\n"),
-                TooltipTextUtil.createText("author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+                TooltipTextUtil.createText(" (case insensitive). "));
         TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(false, false, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
@@ -43,14 +41,12 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testNoAst() {
         String query = "a b";
-        List<Text> expectedTexts = Arrays.asList(
+        List<Text> expectedTexts = List.of(
                 TooltipTextUtil.createText("This search contains entries in which any field contains the term "),
                 TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD),
                 TooltipTextUtil.createText(" and "),
                 TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD),
-                TooltipTextUtil.createText(" (case insensitive). "),
-                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:\n"),
-                TooltipTextUtil.createText("author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+                TooltipTextUtil.createText(" (case insensitive). "));
         TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(false, false, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
@@ -59,10 +55,12 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testNoAstRegex() {
         String query = "a b";
-        List<Text> expectedTexts = Arrays.asList(TooltipTextUtil.createText("This search contains entries in which any field contains the regular expression "),
-                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" and "), TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" (case insensitive). "),
-                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:\n"),
-                TooltipTextUtil.createText("author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+        List<Text> expectedTexts = List.of(
+                TooltipTextUtil.createText("This search contains entries in which any field contains the regular expression "),
+                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD),
+                TooltipTextUtil.createText(" and "),
+                TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD),
+                TooltipTextUtil.createText(" (case insensitive). "));
         TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(false, true, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
@@ -71,10 +69,12 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testNoAstRegexCaseSensitive() {
         String query = "a b";
-        List<Text> expectedTexts = Arrays.asList(TooltipTextUtil.createText("This search contains entries in which any field contains the regular expression "),
-                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" and "), TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" (case sensitive). "),
-                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:\n"),
-                TooltipTextUtil.createText("author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+        List<Text> expectedTexts = List.of(
+                TooltipTextUtil.createText("This search contains entries in which any field contains the regular expression "),
+                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD),
+                TooltipTextUtil.createText(" and "),
+                TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD),
+                TooltipTextUtil.createText(" (case sensitive). "));
         TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(true, true, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
@@ -83,10 +83,12 @@ class ContainsAndRegexBasedSearchRuleDescriberTest {
     @Test
     void testNoAstCaseSensitive() {
         String query = "a b";
-        List<Text> expectedTexts = Arrays.asList(TooltipTextUtil.createText("This search contains entries in which any field contains the term "),
-                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" and "), TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD), TooltipTextUtil.createText(" (case sensitive). "),
-                TooltipTextUtil.createText("\n\nHint: To search specific fields only, enter for example:\n"),
-                TooltipTextUtil.createText("author=smith and title=electrical", TooltipTextUtil.TextType.MONOSPACED));
+        List<Text> expectedTexts = List.of(
+                TooltipTextUtil.createText("This search contains entries in which any field contains the term "),
+                TooltipTextUtil.createText("a", TooltipTextUtil.TextType.BOLD),
+                TooltipTextUtil.createText(" and "),
+                TooltipTextUtil.createText("b", TooltipTextUtil.TextType.BOLD),
+                TooltipTextUtil.createText(" (case sensitive). "));
         TextFlow description = new ContainsAndRegexBasedSearchRuleDescriber(true, false, query).getDescription();
 
         TextFlowEqualityHelper.assertEquals(expectedTexts, description);
